🔮✈️ Checkpoint ./public/index.html:16004622/1703 ./.glitch-assets:16004622/374 ./public/style.css:16004622/344

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,20 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
     </head>
     <body>
+      <div id="window">
+        <input id="handle" type="text" placeholder="User Handle" />
+        <div id="playArea">
+          <img src="https://cdn.glitch.com/1613f632-e960-433e-9ef8-9778ae67ee09%2Fwhitesquare.jpg?v=1589831775490" id="square1" class="emptysquare">
+          <img src="https://cdn.glitch.com/1613f632-e960-433e-9ef8-9778ae67ee09%2Fwhitesquare.jpg?v=1589831775490" id="square2" class="emptysquare">
+          <img src="https://cdn.glitch.com/1613f632-e960-433e-9ef8-9778ae67ee09%2Fwhitesquare.jpg?v=1589831775490" id="square3" class="emptysquare">
+          <img src="https://cdn.glitch.com/1613f632-e960-433e-9ef8-9778ae67ee09%2Fwhitesquare.jpg?v=1589831775490" id="square4" class="emptysquare">
+          <img src="https://cdn.glitch.com/1613f632-e960-433e-9ef8-9778ae67ee09%2Fwhitesquare.jpg?v=1589831775490" id="square5" class="emptysquare">
+          <img src="https://cdn.glitch.com/1613f632-e960-433e-9ef8-9778ae67ee09%2Fwhitesquare.jpg?v=1589831775490" id="square6" class="emptysquare">
+          <img src="https://cdn.glitch.com/1613f632-e960-433e-9ef8-9778ae67ee09%2Fwhitesquare.jpg?v=1589831775490" id="square7" class="emptysquare">
+          <img src="https://cdn.glitch.com/1613f632-e960-433e-9ef8-9778ae67ee09%2Fwhitesquare.jpg?v=1589831775490" id="square8" class="emptysquare">
+          <img src="https://cdn.glitch.com/1613f632-e960-433e-9ef8-9778ae67ee09%2Fwhitesquare.jpg?v=1589831775490" id="square9" class="emptysquare">
+        </div>
+      </div>
       <script src="script.js"></script>
 
     </body>
