--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <body>
       <div id="window">
         <input id="handle" type="text" placeholder="User Handle" name="handle"/>
-        <div id="playArea">
+        <div class="playArea">
           <img src="https://cdn.glitch.com/1613f632-e960-433e-9ef8-9778ae67ee09%2Fwhitesquare.jpg?v=1589831775490" id="square1" class="emptysquare">
           <img src="https://cdn.glitch.com/1613f632-e960-433e-9ef8-9778ae67ee09%2Fwhitesquare.jpg?v=1589831775490" id="square2" class="emptysquare">
           <img src="https://cdn.glitch.com/1613f632-e960-433e-9ef8-9778ae67ee09%2Fwhitesquare.jpg?v=1589831775490" id="square3" class="emptysquare">
