✂️🍯 Checkpoint ./public/style.css:16004622/657 ./public/index.html:16004622/167

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,10 @@
           <img src="https://cdn.glitch.com/1613f632-e960-433e-9ef8-9778ae67ee09%2Fwhitesquare.jpg?v=1589831775490" id="square9" class="emptysquare">
         </div>
       </div>
+      <div class="winning-message" id="winningMessage">
+        <div data-winning-message-text></div>
+        <button id="restartButton">Restart</button>
+      </div>
       <script src="script.js"></script>
 
     </body>
