--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         </div>
       </div>
       <div class="winning-message" id="winningMessage">
-        <div data-winning-message-text></div>
+        <div data-winning-message-text>X wins!</div>
         <button id="restartButton">Restart</button>
       </div>
       <script src="script.js"></script>
