🌵🎭 Checkpoint ./public/index.html:16004622/28 ./public/script.js:16004622/28

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       </div>
       <div class="winning-message" id="winningMessage">
         <div data-winning-message-text></div>
-        <button id="restartButton">Restart</button>
+        <button id="restartButton" onclick="location.reload()">Restart</button>
       </div>
       <script src="script.js"></script>
 
